# primitive-recursive-peano

./: LICENSE  Setup.hs  build-test.sh  peano.cabal
src/: BasePrimitiveRecursion.hs  Main.hs  Natural.hs  PrimitiveRecursion.hs  PrimitiveRecursive.hs
test/: Test.hs  TestBasePrimitiveRecursion.hs  TestPrimitiveRecursion.hs  TestPrimitiveRecursive.hs  Utils.hs
